Assignment/assignment1/target/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'readInteger()'", "'printInteger'", "'readFloat()'", 
                     "'printFloat'", "'readBoolean()'", "'printBoolean'", 
                     "'readString()'", "'printString'", "'super'", "'preventDefault()'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'auto'", "'break'", "'boolean'", "'do'", "'else'", 
                     "'false'", "'float'", "'for'", "'function'", "'if'", 
                     "'integer'", "'return'", "'string'", "'true'", "'while'", 
                     "'void'", "'out'", "'continue'", "'of'", "'inherit'", 
                     "'array'", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", 
                     "'&&'", "'||'", "'=='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "'::'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "','", "'.'", "';'", "'='", "':'", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'\"'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "OP_RELATIONAL", 
                      "OP_MUL", "BLOCK_COMMENT", "LINE_COMMENT", "AUTO", 
                      "BREAK", "BOOLEAN", "DO", "ELSE", "FALSE", "FLOAT", 
                      "FOR", "FUNCTION", "IF", "INTEGER", "RETURN", "STRING", 
                      "TRUE", "WHILE", "VOID", "OUT", "CONTINUE", "OF", 
                      "INHERIT", "ARRAY", "ADD", "SUB", "MUL", "DIV", "MOD", 
                      "NOT", "AND", "OR", "EQUAL", "DIFF", "SMALLER", "SMALLER_OR_EQUAL", 
                      "GREATER", "GREATER_OR_EQUAL", "CONCAT", "OP_BOOL", 
                      "OP_INT", "OP_FLOAT", "OP_STRING", "COMMA", "DOT", 
                      "SEMI", "ASSIGN", "COLON", "LB", "RB", "LP", "RP", 
                      "LS", "RS", "INTLIT", "FLOATLIT", "STRINGLIT", "BOOLLIT", 
                      "KEYWORD", "ID", "WS", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_typ = 0
    RULE_func_typ = 1
    RULE_var_typ = 2
    RULE_arraylit = 3
    RULE_subarrayitem = 4
    RULE_arritems = 5
    RULE_arraydecl = 6
    RULE_intlist = 7
    RULE_vardecl = 8
    RULE_idlist = 9
    RULE_funcdecl = 10
    RULE_paramdecl = 11
    RULE_paramlist = 12
    RULE_paramprime = 13
    RULE_param = 14
    RULE_program = 15
    RULE_decllist = 16
    RULE_decl = 17
    RULE_exprlist = 18
    RULE_expr = 19
    RULE_expr1 = 20
    RULE_expr2 = 21
    RULE_expr3 = 22
    RULE_expr4 = 23
    RULE_expr5 = 24
    RULE_expr6 = 25
    RULE_expr7 = 26
    RULE_expr8 = 27
    RULE_subexpr = 28
    RULE_idx_op = 29
    RULE_callexpr = 30
    RULE_body = 31
    RULE_stmtlist = 32
    RULE_stmt = 33
    RULE_block_stmt = 34
    RULE_assignstmt = 35
    RULE_ifstmt = 36
    RULE_forstmt = 37
    RULE_whilestmt = 38
    RULE_dowhilestmt = 39
    RULE_breakstmt = 40
    RULE_continuestmt = 41
    RULE_returnstmt = 42
    RULE_callstmt = 43
    RULE_arglist = 44
    RULE_arglistprime = 45
    RULE_spec_func = 46
    RULE_readInt = 47
    RULE_printInt = 48
    RULE_readFloat = 49
    RULE_printFloat = 50
    RULE_readBool = 51
    RULE_printBool = 52
    RULE_readString = 53
    RULE_printString = 54
    RULE_superr = 55
    RULE_preventDefault = 56
    RULE_intVal = 57
    RULE_floatVal = 58
    RULE_stringVal = 59
    RULE_boolVal = 60

    ruleNames =  [ "typ", "func_typ", "var_typ", "arraylit", "subarrayitem", 
                   "arritems", "arraydecl", "intlist", "vardecl", "idlist", 
                   "funcdecl", "paramdecl", "paramlist", "paramprime", "param", 
                   "program", "decllist", "decl", "exprlist", "expr", "expr1", 
                   "expr2", "expr3", "expr4", "expr5", "expr6", "expr7", 
                   "expr8", "subexpr", "idx_op", "callexpr", "body", "stmtlist", 
                   "stmt", "block_stmt", "assignstmt", "ifstmt", "forstmt", 
                   "whilestmt", "dowhilestmt", "breakstmt", "continuestmt", 
                   "returnstmt", "callstmt", "arglist", "arglistprime", 
                   "spec_func", "readInt", "printInt", "readFloat", "printFloat", 
                   "readBool", "printBool", "readString", "printString", 
                   "superr", "preventDefault", "intVal", "floatVal", "stringVal", 
                   "boolVal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    OP_RELATIONAL=11
    OP_MUL=12
    BLOCK_COMMENT=13
    LINE_COMMENT=14
    AUTO=15
    BREAK=16
    BOOLEAN=17
    DO=18
    ELSE=19
    FALSE=20
    FLOAT=21
    FOR=22
    FUNCTION=23
    IF=24
    INTEGER=25
    RETURN=26
    STRING=27
    TRUE=28
    WHILE=29
    VOID=30
    OUT=31
    CONTINUE=32
    OF=33
    INHERIT=34
    ARRAY=35
    ADD=36
    SUB=37
    MUL=38
    DIV=39
    MOD=40
    NOT=41
    AND=42
    OR=43
    EQUAL=44
    DIFF=45
    SMALLER=46
    SMALLER_OR_EQUAL=47
    GREATER=48
    GREATER_OR_EQUAL=49
    CONCAT=50
    OP_BOOL=51
    OP_INT=52
    OP_FLOAT=53
    OP_STRING=54
    COMMA=55
    DOT=56
    SEMI=57
    ASSIGN=58
    COLON=59
    LB=60
    RB=61
    LP=62
    RP=63
    LS=64
    RS=65
    INTLIT=66
    FLOATLIT=67
    STRINGLIT=68
    BOOLLIT=69
    KEYWORD=70
    ID=71
    WS=72
    ERROR_CHAR=73
    UNCLOSE_STRING=74
    ILLEGAL_ESCAPE=75

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    id_count = 0
    expr_count = 0



    class TypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_typ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTyp" ):
                return visitor.visitTyp(self)
            else:
                return visitor.visitChildren(self)




    def typ(self):

        localctx = MT22Parser.TypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_typ)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.AUTO) | (1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_typContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_func_typ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_typ" ):
                return visitor.visitFunc_typ(self)
            else:
                return visitor.visitChildren(self)




    def func_typ(self):

        localctx = MT22Parser.Func_typContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_func_typ)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.AUTO, MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.typ()
                pass
            elif token in [MT22Parser.VOID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.match(MT22Parser.VOID)
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.match(MT22Parser.ARRAY)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_typContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def arraydecl(self):
            return self.getTypedRuleContext(MT22Parser.ArraydeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_typ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_typ" ):
                return visitor.visitVar_typ(self)
            else:
                return visitor.visitChildren(self)




    def var_typ(self):

        localctx = MT22Parser.Var_typContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_typ)
        try:
            self.state = 131
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.AUTO, MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.typ()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.arraydecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraylitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MT22Parser.LP, 0)

        def subarrayitem(self):
            return self.getTypedRuleContext(MT22Parser.SubarrayitemContext,0)


        def RP(self):
            return self.getToken(MT22Parser.RP, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_arraylit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraylit" ):
                return visitor.visitArraylit(self)
            else:
                return visitor.visitChildren(self)




    def arraylit(self):

        localctx = MT22Parser.ArraylitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arraylit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(MT22Parser.LP)
            self.state = 134
            self.subarrayitem()
            self.state = 135
            self.match(MT22Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubarrayitemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arritems(self):
            return self.getTypedRuleContext(MT22Parser.ArritemsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_subarrayitem

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubarrayitem" ):
                return visitor.visitSubarrayitem(self)
            else:
                return visitor.visitChildren(self)




    def subarrayitem(self):

        localctx = MT22Parser.SubarrayitemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_subarrayitem)
        try:
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.LP, MT22Parser.INTLIT, MT22Parser.FLOATLIT, MT22Parser.STRINGLIT, MT22Parser.BOOLLIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.arritems()
                pass
            elif token in [MT22Parser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArritemsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def arritems(self):
            return self.getTypedRuleContext(MT22Parser.ArritemsContext,0)


        def INTLIT(self):
            return self.getToken(MT22Parser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(MT22Parser.FLOATLIT, 0)

        def STRINGLIT(self):
            return self.getToken(MT22Parser.STRINGLIT, 0)

        def BOOLLIT(self):
            return self.getToken(MT22Parser.BOOLLIT, 0)

        def arraylit(self):
            return self.getTypedRuleContext(MT22Parser.ArraylitContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arritems

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArritems" ):
                return visitor.visitArritems(self)
            else:
                return visitor.visitChildren(self)




    def arritems(self):

        localctx = MT22Parser.ArritemsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arritems)
        try:
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MT22Parser.INTLIT]:
                    self.state = 141
                    self.match(MT22Parser.INTLIT)
                    pass
                elif token in [MT22Parser.FLOATLIT]:
                    self.state = 142
                    self.match(MT22Parser.FLOATLIT)
                    pass
                elif token in [MT22Parser.STRINGLIT]:
                    self.state = 143
                    self.match(MT22Parser.STRINGLIT)
                    pass
                elif token in [MT22Parser.BOOLLIT]:
                    self.state = 144
                    self.match(MT22Parser.BOOLLIT)
                    pass
                elif token in [MT22Parser.LP]:
                    self.state = 145
                    self.arraylit()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 148
                self.match(MT22Parser.COMMA)
                self.state = 149
                self.arritems()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MT22Parser.INTLIT]:
                    self.state = 150
                    self.match(MT22Parser.INTLIT)
                    pass
                elif token in [MT22Parser.FLOATLIT]:
                    self.state = 151
                    self.match(MT22Parser.FLOATLIT)
                    pass
                elif token in [MT22Parser.STRINGLIT]:
                    self.state = 152
                    self.match(MT22Parser.STRINGLIT)
                    pass
                elif token in [MT22Parser.BOOLLIT]:
                    self.state = 153
                    self.match(MT22Parser.BOOLLIT)
                    pass
                elif token in [MT22Parser.LP]:
                    self.state = 154
                    self.arraylit()
                    pass
                else:
                    raise NoViableAltException(self)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraydeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def LS(self):
            return self.getToken(MT22Parser.LS, 0)

        def intlist(self):
            return self.getTypedRuleContext(MT22Parser.IntlistContext,0)


        def RS(self):
            return self.getToken(MT22Parser.RS, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arraydecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraydecl" ):
                return visitor.visitArraydecl(self)
            else:
                return visitor.visitChildren(self)




    def arraydecl(self):

        localctx = MT22Parser.ArraydeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arraydecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(MT22Parser.ARRAY)
            self.state = 160
            self.match(MT22Parser.LS)
            self.state = 161
            self.intlist()
            self.state = 162
            self.match(MT22Parser.RS)
            self.state = 163
            self.match(MT22Parser.OF)
            self.state = 164
            self.typ()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MT22Parser.INTLIT, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def intlist(self):
            return self.getTypedRuleContext(MT22Parser.IntlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_intlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntlist" ):
                return visitor.visitIntlist(self)
            else:
                return visitor.visitChildren(self)




    def intlist(self):

        localctx = MT22Parser.IntlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_intlist)
        try:
            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.match(MT22Parser.INTLIT)
                self.state = 167
                self.match(MT22Parser.COMMA)
                self.state = 168
                self.intlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 169
                self.match(MT22Parser.INTLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def var_typ(self):
            return self.getTypedRuleContext(MT22Parser.Var_typContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def exprlist(self):
            return self.getTypedRuleContext(MT22Parser.ExprlistContext,0)


        def arraylit(self):
            return self.getTypedRuleContext(MT22Parser.ArraylitContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.idlist()
            self.state = 173
            self.match(MT22Parser.COLON)
            self.state = 174
            self.var_typ()
            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.ASSIGN:
                self.state = 175
                self.match(MT22Parser.ASSIGN)
                self.state = 178
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MT22Parser.SUB, MT22Parser.NOT, MT22Parser.LB, MT22Parser.INTLIT, MT22Parser.FLOATLIT, MT22Parser.STRINGLIT, MT22Parser.BOOLLIT, MT22Parser.ID]:
                    self.state = 176
                    self.exprlist()
                    pass
                elif token in [MT22Parser.LP]:
                    self.state = 177
                    self.arraylit()
                    pass
                else:
                    raise NoViableAltException(self)



            self.state = 182
            self.match(MT22Parser.SEMI)

            if self.id_count != self.expr_count:
            	raise SyntaxError("Error on line " + str(self._input.LT(-1).line) + 
            					  " col " + str(self._input.LT(-1).column) + ": " + self._input.LT(-1).text)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_idlist)
        try:
            self.state = 191
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 185
                self.match(MT22Parser.ID)
                self.state = 186
                self.match(MT22Parser.COMMA)
                self.id_count += 1
                self.state = 188
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 189
                self.match(MT22Parser.ID)
                self.id_count += 1
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'
